[package]
name = "mtgsdk"
version = "0.1.0"
authors = ["rogertorres <rogertps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mtgsdk"
path = "src/bin/main.rs"

[lib]
name = "mtgsdk"
path = "src/lib.rs"

[dependencies]
hyper = "0.14"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"]}
async-trait = "0.1"